package com.jorgestor.api.modelo;

public enum Dificultad {
    FACIL,
    MEDIO,
    DIFICIL
}
