package com.jorgestor.api.modelo;

public enum EstadoExamen {
    PENDIENTE,
    ASIGNADO,
    REALIZADO,
    ENTREGADO,
    PENDIENTE_CALIFICACION,
    CORREGIDO
}
